Fixed overflow on desktop sizing

--- a/themes/FoundationPress/src/assets/scss/modules/_front-page.scss
+++ b/themes/FoundationPress/src/assets/scss/modules/_front-page.scss
@@ -297,7 +297,6 @@
   .wrapper {
     display: flex;
     flex-direction: row;
-    width: 100vw;
     .orbit-bullets {
       display: none;
     }
