--- a/themes/FoundationPress/src/assets/scss/modules/header.scss
+++ b/themes/FoundationPress/src/assets/scss/modules/header.scss
@@ -132,7 +132,7 @@ a:hover, a:focus {
 	  		ul {
 	  			display: flex;
 	  			margin-top: 1rem;
-	  			width: 60%;
+	  			width: 80%;
 	  		li {
 	  			list-style-type: none;
 	  			margin: 0% 3%;
