--- a/themes/FoundationPress/src/assets/scss/templates/_gallery.scss
+++ b/themes/FoundationPress/src/assets/scss/templates/_gallery.scss
@@ -184,7 +184,6 @@
              }
              .gallery-header {
                 margin-top: 3rem;
-                width: 100vw;
                  
                  h1{
                     
@@ -208,7 +207,6 @@
              .gallery-center{
                  display: flex;
                  justify-content: center;
-                 width: 100vw;
 
              .gallery-relative-wrap {
                     position: relative;
